# pdg-agent-tool-platform-internal

./: .gitignore  .kanban.toml  .mcp.json  .oxfmtrc.json  .pre-commit-config.yaml  .secretsignore  AGENTS.md  Makefile  SECURITY.md  docker-bake.hcl  pyproject.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json  dnsmasq.conf  init-dev-user.sh  init-firewall.sh
.github/: CODEOWNERS  actionlint.yml
.github/actions/build-backend-image/: action.yml
.github/actions/build-devcontainer-image/: action.yml
.github/actions/build-model-server-image/: action.yml
.github/actions/install-deps-and-generate-openapi-client/: action.yml
.github/actions/run-nightly-provider-chat-test/: action.yml
.github/actions/setup-playwright/: action.yml
.github/actions/setup-python-and-install-dependencies/: action.yml
.github/actions/setup-test-license/: action.yml
.github/workflows/: deployment.yml  docker-tag-beta.yml  docker-tag-latest.yml  nightly-external-dependency-unit-tests.yml  post-merge-beta-cherry-pick.yml  pr-craft-k8s-tests.yml  pr-database-tests.yml  pr-desktop-build.yml  pr-external-dependency-unit-tests.yml  pr-golang-tests.yml  pr-helm-chart-testing.yml  pr-integration-tests.yml  pr-jest-tests.yml  pr-linear-check.yml  pr-playwright-tests.yml  pr-python-checks.yml  pr-python-connector-tests.yml  pr-python-model-tests.yml  pr-python-tests.yml  pr-quality-checks.yml  preview.yml  release-cli.yml  release-devcontainer.yml  release-devtools.yml  release-opal.yml  reusable-nightly-llm-provider-chat.yml  sandbox-deployment.yml  storybook-deploy.yml  zizmor.yml
.greptile/: rules.md
backend/: Dockerfile  Dockerfile.model_server  pytest.ini  supervisord.conf
backend/alembic/: env.py  run_multitenant_migrations.py
backend/alembic/versions/: 01f8e6d95a33_populate_flow_mapping_data.py  027381bce97c_add_shortcut_option_for_users.py  03bf8be6b53a_rework_kg_config.py  03d085c5c38d_backfill_account_type.py  03d710ccf29c_add_permission_sync_attempt_tables.py  07b98176f1de_code_interpreter_seed.py  0816326d83aa_add_federated_connector_tables.py  08a1eda20fe1_add_earliest_indexing_to_connector.py  09995b8811eb_add_theme_preference_to_user.py  0bb4558f35df_add_scim_username_to_scim_user_mapping.py  0cd424f32b1d_user_file_data_preparation_and_backfill.py  0df3c40e902a_drop_demo_data_enabled_from_build_.py  0ebb1d516877_add_ccpair_deletion_failure_message.py  114a638452db_add_default_app_mode_to_user.py  12635f6655b7_drive_canonical_ids.py  14162713706c_add_index_attempt_stage_metric_table.py  16c37a30adf2_user_file_relationship_migration.py  19c0ccb01687_migrate_to_contextual_rag_model.py  1b8206b29c5d_add_user_delete_cascades.py  1c36b3dc2f4e_add_full_exception_trace_to_permission_.py  1d78c0ca7853_remove_voice_provider_deleted_column.py  1f2a3b4c5d6e_add_internet_search_and_content_providers.py  2020d417ec84_single_onyx_craft_migration.py  238b84885828_add_foreign_key_to_user__external_user_.py  25a5501dc766_group_permissions_phase1.py  2666d766cb9b_google_oauth2.py  26b931506ecb_default_chosen_assistants_to_none.py  27fb147a843f_add_timestamps_to_user_table.py  28429dd43807_scheduled_tasks.py  2955778aa44c_add_chunk_count_to_document.py  2acdef638fc2_add_switchover_type_field.py  2b75d0a8ffcb_user_file_schema_cleanup.py  2b90f3af54b8_usage_limits.py  2c2430828bdf_add_unique_constraint_to_inputprompt_.py  2c7f9d3a84a0_add_pat_type_and_encrypted_pat.py  2cdeff6d8c93_set_built_in_to_default.py  2f80c6a2550f_add_chat_session_specific_temperature_.py  2f95e36923e6_add_indexing_coordination.py  31bd8c17325e_targeted_reindex_schema.py  (+176 more)
backend/ee/onyx/: main.py
backend/model_server/: encoders.py  main.py
backend/onyx/: main.py  mcp_server_main.py  setup.py
backend/requirements/: README.md  default.txt  dev.txt  ee.txt  model_server.txt
backend/scripts/: celery_purge_queue.py  chat_feedback_dump.py  chat_loadtest.py  coding_agent_test.py  dev_celery_reload.py  dev_run_background_jobs.py  force_delete_connector_by_id.py  hard_delete_chats.py  orphan_doc_cleanup_script.py  reencrypt_secrets.py  reset_indexes.py  reset_postgres.py  restart_containers.sh  rotate_llm_provider_keys.py  run_enterpriserag_bench_questions.py  save_load_state.py  search_loadtest.py  seed_dev_license.py  setup_craft_templates.sh  update_connector_prune_freq.py
backend/shared_configs/: configs.py  contextvars.py  model_server_models.py  utils.py
backend/tests/: README.md
cli/: .golangci.yml  README.md  hatch_build.py  main.go
cli/cmd/: agents.go  ask.go  ask_test.go  chat.go  common.go  common_test.go  experiments.go  install_skill.go  install_skill_test.go  root.go  search.go  search_test.go  serve.go  validate.go
deployment/docker_compose/: docker-compose.craft.yml  docker-compose.dev.yml  docker-compose.mcp-api-key-test.yml  docker-compose.mcp-oauth-test.yml  docker-compose.mcp-per-user-key-test.yml  docker-compose.multitenant-dev.yml  docker-compose.onyx-lite.yml  docker-compose.prod-cloud.yml  docker-compose.prod-no-letsencrypt.yml  docker-compose.prod.yml  docker-compose.search-testing.yml  docker-compose.yml  env.prod.template  env.template  install.sh
deployment/helm/: MIGRATION.md  README.md
desktop/: README.md  package-lock.json  package.json
desktop/src/: index.html  titlebar.js
desktop/src-tauri/: Cargo.toml  tauri.windows.conf.json
docs/craft/: 2026-05-21-nuke-local-sandbox-manager.md  craft-main-plan.md  opencode-serve-migration.md
docs/dev/: local-kubernetes.md
examples/assistants-api/: topics_analyzer.py
examples/widget/: package-lock.json  package.json
extensions/chrome/: service_worker.js
profiling/: README.md  docker-compose.yml  prometheus.yml
tools/ods/: README.md
web/: .oxlintrc.json  AGENTS.md  Dockerfile  README.md  jest.config.js  next.config.js  package.json  playwright.config.ts  tsconfig.json  tsconfig.types.json
web/.storybook/: README.md  main.ts  preview.ts
web/src/: ce.tsx
web/tailwind-themes/: tailwind.config.js
web/tests/: README.md
widget/: index.html  package-lock.json  vite.config.ts
widget/src/: widget.ts
(+2153 files in other folders)
